--- a/TODO
+++ b/TODO
@@ -7,3 +7,7 @@ Todo:
   ☐ next, prev buttons in calendar
   ☐ login page
   ☐ add dynamic min and max date to datepicker
+  ☐ add team id column to the database
+  ☐ saturday and sundy unselectable
+  ☐ show only team homeoffice dates on the datepicker
+  ☐ show the team partner in details
