--- a/TODO
+++ b/TODO
@@ -5,12 +5,17 @@ Todo:
   ✔ create rest service @done(19-03-04 08:17)
   ✔ get data from api @started(19-03-02 08:26) @done(19-03-04 08:17) @lasted(1d23h51m55s)
   ☐ next, prev buttons in calendar
-  ☐ login page
+  ☐ login page @high 
   ☐ add dynamic min and max date to datepicker
   ✔ add team id column to the database @done(19-03-06 08:09)
   ☐ saturday and sundy unselectable
   ✔ show only team homeoffice dates on the datepicker @done(19-03-06 08:09)
-  ☐ show the team partner in details
-  ☐ add validation if the user is not from the selected department then he can not add an entry
-  ☐ use modules and services in vuex @started(19-03-06 08:09)
+  ☐ show the team partner in details @low 
+  ☐ add validation if the user is not from the selected department then he can not add an entry @low 
+  ✔ use modules and services in vuex @started(19-03-06 08:09) @done(19-03-06 11:04) @lasted(2h55m46s)
   ☐ uninstall vue-resource
+  ☐ SSO
+
+FIXME:
+  ☐ add team id when insert into homeoffice @critical 
+  ☐ validation on empty submit @critical 
