api file deleted, vue-resource uninstalled

--- a/TODO
+++ b/TODO
@@ -17,5 +17,5 @@ Todo:
   ☐ SSO
 
 FIXME:
-  ☐ add team id when insert into homeoffice @critical 
+  ✔ add team id when insert into homeoffice @critical @done(19-03-06 12:23)
   ☐ validation on empty submit @critical 
