--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@ Todo:
   ✔ map state to login page @done(19-03-07 10:34)
   ✔ get team events for the current user @started(19-03-07 10:40) @done(19-03-07 10:44) @lasted(4m1s)
   ✔ change favicon @done(19-03-07 11:23)
+  ✘ save credential in cookies @critical @cancelled(19-03-07 11:33)
   ☐ get events and dates for the current month
   ☐ next, prev buttons in calendar
   ☐ add dynamic min and max date to datepicker
@@ -23,7 +24,6 @@ Todo:
   ☐ show the team partner in details @low 
   ☐ add validation if the user is not from the selected department then he can not add an entry @low 
   ☐ SSO
-  ☐ save credential in cookies @critical 
 
 FIXME:
   ✔ add team id when insert into homeoffice @critical @done(19-03-06 12:23)
