disable date if has been selected, validation on empty submit

--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@ Todo:
   ✔ get team events for the current user @started(19-03-07 10:40) @done(19-03-07 10:44) @lasted(4m1s)
   ✔ change favicon @done(19-03-07 11:23)
   ✘ save credential in cookies @critical @cancelled(19-03-07 11:33)
+  ✔ disable date if the team partner has selected it @done(19-03-07 12:29)
   ☐ get events and dates for the current month
   ☐ next, prev buttons in calendar
   ☐ add dynamic min and max date to datepicker
@@ -24,7 +25,8 @@ Todo:
   ☐ show the team partner in details @low 
   ☐ add validation if the user is not from the selected department then he can not add an entry @low 
   ☐ SSO
+  ☐ reset all my date
 
 FIXME:
   ✔ add team id when insert into homeoffice @critical @done(19-03-06 12:23)
-  ☐ validation on empty submit @critical 
+  ✔ validation on empty submit @critical @done(19-03-07 11:43)
