--- a/TODO
+++ b/TODO
@@ -18,6 +18,8 @@ Todo:
   ✔ change favicon @done(19-03-07 11:23)
   ✘ save credential in cookies @critical @cancelled(19-03-07 11:33)
   ✔ disable date if the team partner has selected it @done(19-03-07 12:29)
+  ✔ reset all my date @done(19-03-07 14:39)
+  ☐ clear datepicker when reset
   ☐ get events and dates for the current month
   ☐ next, prev buttons in calendar
   ☐ add dynamic min and max date to datepicker
@@ -25,7 +27,6 @@ Todo:
   ☐ show the team partner in details @low 
   ☐ add validation if the user is not from the selected department then he can not add an entry @low 
   ☐ SSO
-  ☐ reset all my date
 
 FIXME:
   ✔ add team id when insert into homeoffice @critical @done(19-03-06 12:23)
