--- a/TODO
+++ b/TODO
@@ -19,14 +19,14 @@ Todo:
   ✘ save credential in cookies @critical @cancelled(19-03-07 11:33)
   ✔ disable date if the team partner has selected it @done(19-03-07 12:29)
   ✔ reset all my date @done(19-03-07 14:39)
-  ☐ clear datepicker when reset
+  ✔ saturday and sundy unselectable @done(19-03-07 15:31)
+  ✘ add validation if the user is not from the selected department then he can not add an entry @low @cancelled(19-03-07 15:31)
+  ✘ SSO @cancelled(19-03-07 15:31)
+  ✔ clear datepicker when reset @done(19-03-07 16:10)
   ☐ get events and dates for the current month
   ☐ next, prev buttons in calendar
   ☐ add dynamic min and max date to datepicker
-  ☐ saturday and sundy unselectable
   ☐ show the team partner in details @low 
-  ☐ add validation if the user is not from the selected department then he can not add an entry @low 
-  ☐ SSO
 
 FIXME:
   ✔ add team id when insert into homeoffice @critical @done(19-03-06 12:23)
