--- a/TODO
+++ b/TODO
@@ -29,6 +29,8 @@ Todo:
   ✘ add dynamic min and max date to datepicker @cancelled(19-03-08 07:54)
   ✔ clear selected dates button @done(19-03-08 08:23)
   ✔ next, prev buttons in calendar @done(19-03-08 09:03)
+  ☐ profile page
+  ☐ show only my team
   ☐ show loading spinner
 
 FIXME:
